clusters/raspberrypi/apps/beaverhabits/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beaverhabits
  namespace: beaverhabits
spec:
  selector:
    matchLabels:
      app: beaverhabits
  template:
    metadata:
      labels:
        app: beaverhabits
    spec:
      containers:
      - name: beaverhabits
        image: daya0576/beaverhabits:0.4.1
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      volumes:
      - name: beaverhabits-pvc
        persistentVolumeClaim:
          claimName: beaverhabits-pvc
      volumeMounts:
      - mountPath: /app/data
        name: beaverhabits-pvc
