clusters/raspberrypi/apps/beaverhabits/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: beaverhabits-svc
  namespace: beaverhabits
spec:
  selector:
    app: beaverhabits
  ports:
  - port: 8080
    targetPort: 8080
